[gd_scene load_steps=3 format=3 uid="uid://c3lhn4lb5t7va"]

[ext_resource type="Script" path="res://scene/game_state_ui.gd" id="1_t7o1h"]
[ext_resource type="Texture2D" uid="uid://edcmg1m5ssc6" path="res://assets/Icons/rotate-right.png" id="2_2r42f"]

[node name="GameStateUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_t7o1h")

[node name="PlayerLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.553
anchor_top = 0.444
anchor_right = 0.553
anchor_bottom = 0.444
offset_left = -149.76
offset_top = -25.5201
offset_right = 150.24
offset_bottom = 24.4799
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Player 1's Turn"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DirectionIndicator" type="TextureRect" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2r42f")

[node name="CardsToDrawLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Draw 2 cards"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerHighlight1" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerHighlight2" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerHighlight3" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerHighlight4" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
